--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-<!DOCTYPE html>
+<!DOCTYPE html>  <link rel="stylesheet" href =./style.css>
 <html>
-  <link rel="stylesheet" href =./style.css>
+
   <head>
     <meta charset="utf-8">
     <title>Introduction to CSS Lab</title>
